# rust-winui-poc

./: Cargo.toml  app.manifest  resource.rc
.github/workflows/: rust.yml
bindings/: Cargo.toml  build.rs
src/: interop.rs  main.rs
src/page/: completion.rs  download.rs  landing.rs  landing_v2.rs  mod.rs
src/parse_ui/: button.rs  combo.rs  grid.rs  mod.rs  stack.rs  textblock.rs  utils.rs
ui/: landing.xml
