[package]
name = "rust-winui"
version = "0.1.0"
authors = ["Zoey Riordan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24"
windows = "0.8"
bindings = { path = "./bindings"}
iso639 = "0.1"
xml-rs = "0.8"

[build-dependencies]
embed-resource = "1.3"
